完善了页面的css和js

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -6,4 +6,21 @@
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 40px;
+}
+
+img{
+    max-width: 100%;
+    min-width: 70%;
+    display: block;
+    margin: 10px auto;
+}
+
+pre{
+    background: #ccc;
+    padding: 10px;
+    border-radius: 4px;
+    overflow: auto;
 }
