实现关联文章列表的功能

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -25,3 +25,18 @@ pre{
     border-radius: 4px;
     overflow: auto;
 }
+
+.list-view{
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.article-item{
+    border-bottom: solid 1px #ccc;
+    padding: 10px;
+}
+.article-item>a{
+    text-decoration: none;
+    color: #000;
+}
