--- a/react-blog/src/component/mobile/article/Article.css
+++ b/react-blog/src/component/mobile/article/Article.css
@@ -1,6 +1,5 @@
 .article-panel-view{
     padding: 20px;
-    background: #eee;
 }
 
 .article-content-title{
@@ -8,9 +7,48 @@
     font-size: 20px;
     word-wrap: break-word;
     font-weight: bold;
-    color: #222;
 }
 
 h1{
     font-size: 16px;
+}
+
+.back-btn{
+    position: fixed;
+    bottom: 40px;
+    width: 50px;
+    height: 40px;
+    background: #f85959;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+
+.follow-btn{
+    position: fixed;
+    top: 40px;
+    width: 50px;
+    height: 40px;
+    right: 0;
+    background: #f85959;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+
+.follow-view{
+    position: fixed;
+    top: 100px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    background: rgba(255,255,255,0.6);
+}
+
+.follow-view>img{
+    margin-right: 10px;
 }
