--- a/react-blog/src/component/mobile/article/Article.css
+++ b/react-blog/src/component/mobile/article/Article.css
@@ -1,6 +1,9 @@
 .article-panel-view{
     padding: 20px;
 }
+.article-panel-view img{
+    width: 100%;
+}
 
 .article-content-title{
     text-align: center;
@@ -16,12 +19,12 @@ h1{
 .back-btn{
     position: fixed;
     bottom: 40px;
-    width: 50px;
-    height: 40px;
+    width: 40px;
+    height: 30px;
     background: #f85959;
     text-align: center;
-    line-height: 40px;
-    font-size: 20px;
+    line-height: 30px;
+    font-size: 16px;
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
 }
@@ -29,13 +32,13 @@ h1{
 .follow-btn{
     position: fixed;
     top: 40px;
-    width: 50px;
-    height: 40px;
+    width: 60px;
+    height: 25px;
     right: 0;
     background: #f85959;
     text-align: center;
-    line-height: 40px;
-    font-size: 20px;
+    line-height: 25px;
+    font-size: 14px;
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
 }
